# menoh_ros

./: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
include/menoh_ros/: io_nodelets.h  nodelet.h
launch/: vgg16.launch
menoh/: CMakeLists.txt  LICENSE  menoh-config.cmake.in  package.xml
menoh_ros/: CMakeLists.txt  package.xml
menoh_ros/include/menoh_ros/: nodelet.h
menoh_ros/src/menoh_ros/: io_nodelets.cpp  nodelet.cpp
menoh_ros/test/: test_menoh_ros.py  vgg16.test
scripts/: retrieve_data.py
src/menoh_ros/: nodelet.cpp
test/: test_menoh_ros.py  vgg16.test
