<?xml version="1.0"?>
<package >
  <name>menoh_ros</name>
  <version>0.1.0</version>
  <description>The ROS interface of Menoh ONNX runtime library</description>

  <maintainer email="akio.code@gmail.com">Akio Ochiai</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>git</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>pluginlib</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
