<?xml version="1.0"?>
<package format="2">
  <name>menoh_ros</name>
  <version>0.1.0</version>
  <description>The ROS interface of Menoh ONNX runtime library</description>

  <maintainer email="akio.code@gmail.com">Akio Ochiai</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>git</build_depend>
  <depend>pluginlib</depend>
  <depend>nodelet</depend>
  <depend>cv_bridge</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>menoh</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
